# YTPlaylistDownloader

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
macos/PlaylistFolderDownloader/: Package.swift
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  check_env.py  generate_app_icon.swift  run_dev.py  run_macos_native.sh
scripts/archlinux/: PKGBUILD.template
src/playlist_folder_downloader/: __init__.py  __main__.py  app.py  cli.py  constants.py  diagnostics.py  logging_config.py  models.py  settings.py
src/playlist_folder_downloader/gui/: about_dialog.py  download_queue_panel.py  main_window.py  playlist_table.py  settings_dialog.py  style.py  video_options_panel.py  widgets.py
src/playlist_folder_downloader/i18n/: en.json  es.json  translation_manager.py
src/playlist_folder_downloader/services/: dependency_checker.py  download_service.py  format_selector.py  js_runtime.py  playlist_service.py  probe_service.py  subtitle_selector.py  (+1 more)
tests/: test_cli_bridge.py  test_download_queue_panel.py  test_filenames.py  test_format_selector.py  test_settings.py  test_settings_dialog.py  test_subtitle_selector.py  test_url_utils.py  test_yt_dlp_runner.py
tests/fixtures/: playlist_info.json  video_info.json
windows/PlaylistFolderDownloader/: App.xaml  App.xaml.cs  AppModel.cs  BackendClient.cs  Formatting.cs  FrontendLog.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  ObservableObject.cs  PlaylistFolderDownloader.csproj  README.md  app.manifest  package.ps1  run.ps1
(+16 files in other folders)
