[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-folder-downloader"
version = "0.1.0"
description = "A cross-platform Qt desktop app for authorized YouTube playlist downloads into playlist-named folders."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Playlist Folder Downloader Contributors"}
]
dependencies = [
  "PySide6>=6.6",
  "yt-dlp[default]>=2024.1.1",
  "platformdirs>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "ruff>=0.4",
  "pyinstaller>=6.0",
  "mypy>=1.8"
]

[project.scripts]
playlist-folder-downloader = "playlist_folder_downloader.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
playlist_folder_downloader = ["i18n/*.json", "assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
